# annotate_transform

./: LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: test.yml
annotate_transform/: __init__.py
tests/: test_annotate_transform.py
